--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<html>
 <head>
     <title>CW Software - Showcase</title>
     <!--<link rel="icon" href="logo.png" /> -->
@@ -54,3 +55,4 @@
         </footer>
     </div>
 </body>
+</html>
