--- a/activities.html
+++ b/activities.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<html>
 <head>
     <title>CW Software - Activities</title>
 
@@ -41,3 +42,4 @@
         </footer>
     </div>
 </body>
+</html>
