--- a/music.html
+++ b/music.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<html>
 <head>
     <title>CW Software - Music</title>
     <link href="css/style.css" rel="stylesheet" type="text/css" />
@@ -119,3 +120,4 @@
         </footer>
     </div>
 </body>
+</html>
