--- a/professional.html
+++ b/professional.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<html>
 <head>
     <title>CW Software - Professional</title>
     <link href="css/style.css" rel="stylesheet" type="text/css" />
@@ -54,3 +55,4 @@
         </footer>
     </div>
 </body>
+</html>
