--- a/music.html
+++ b/music.html
@@ -39,22 +39,23 @@
                 <div class="row gallery">
                     <div>
                         <div>
-                            <a href="img/49212642_10161198364810425_8754994325533753344_n.jpg" target="_self"><img src="img/49212642_10161198364810425_8754994325533753344_n.jpg" alt="photo"></a>
+                            <a href="img/brazil/49212642_10161198364810425_8754994325533753344_n.jpg" target="_self">
+                                <img src="img/brazil/49212642_10161198364810425_8754994325533753344_n.jpg" alt="photo"></a>
                         </div>
                         <p>-</p>
                     </div>
                     <div>
                         <div>
-                            <a href="img/49345133_10161198706680425_8319625082854965248_n.jpg" target="_blank">
-                                <img src="img/49345133_10161198706680425_8319625082854965248_n.jpg" alt="photo">
+                            <a href="img/brazil/49345133_10161198706680425_8319625082854965248_n.jpg" target="_blank">
+                                <img src="img/brazil/49345133_10161198706680425_8319625082854965248_n.jpg" alt="photo">
                             </a>
                         </div>
                         <p>-</p>
                     </div>
                     <div>
                         <div>
-                            <a href="img/IMG_1895.JPG" target="blank">
-                                <img src="img/IMG_1895.JPG" alt="photo">
+                            <a href="img/brazil/IMG_1895.JPG" target="blank">
+                                <img src="brazil/img/IMG_1895.JPG" alt="photo">
                             </a>
                             
                         </div>
@@ -65,24 +66,24 @@
                 <div class="row gallery">
                     <div>
                         <div>
-                            <a href="img/49662924_10156386767478802_7910088878755676160_n.jpg" target="blank">
-                                <img src="img/49662924_10156386767478802_7910088878755676160_n.jpg" alt="photo">
+                            <a href="img/brazil/49662924_10156386767478802_7910088878755676160_n.jpg" target="blank">
+                                <img src="img/brazil/49662924_10156386767478802_7910088878755676160_n.jpg" alt="photo">
                             </a>
                         </div>
                     </div>
                     
                     <div>
                         <div>
-                            <a href="img/50271992_10161198890815425_8397445406312628224_n.jpg" target="blank">
-                                <img src="img/50271992_10161198890815425_8397445406312628224_n.jpg" alt="photo">
+                            <a href="img/brazil/50271992_10161198890815425_8397445406312628224_n.jpg" target="blank">
+                                <img src="img/brazil/50271992_10161198890815425_8397445406312628224_n.jpg" alt="photo">
                             </a>
                         </div>
                     </div>
 
                     <div>
                         <div>
-                            <a href="img/50599618_10161198945060425_4174637782838280192_n.jpg" target="blank">
-                                <img src="img/50599618_10161198945060425_4174637782838280192_n.jpg" alt="photo">
+                            <a href="img/brazil/50599618_10161198945060425_4174637782838280192_n.jpg" target="blank">
+                                <img src="img/brazil/50599618_10161198945060425_4174637782838280192_n.jpg" alt="photo">
                             </a>
                         </div>
                     </div>
@@ -91,24 +92,24 @@
                 <div class="row gallery">
                     <div>
                         <div>
-                            <a href="img/IMG_2019-01-23 00-42-17_5.jpeg" target="blank">
-                                <img src="img/IMG_2019-01-23 00-42-17_5.jpeg" alt="photo">
+                            <a href="img/brazil/IMG_2019-01-23 00-42-17_5.jpeg" target="blank">
+                                <img src="img/brazil/IMG_2019-01-23 00-42-17_5.jpeg" alt="photo">
                             </a>
                         </div>
                     </div>
 
                     <div>
                         <div>
-                            <a href="img/IMG_1337.JPG" target="blank">
-                                <img src="img/IMG_1337.JPG" alt="photo">
+                            <a href="img/brazil/IMG_1337.JPG" target="blank">
+                                <img src="img/brazil/IMG_1337.JPG" alt="photo">
                             </a>
                         </div>
                     </div>
 
                     <div>
                         <div>
-                            <a href="img/IMG_2019-01-14 19-24-46_2.jpeg" target="blank">
-                                <img src="img/IMG_2019-01-14 19-24-46_2.jpeg" alt="photo">
+                            <a href="img/brazil/IMG_2019-01-14 19-24-46_2.jpeg" target="blank">
+                                <img src="img/brazil/IMG_2019-01-14 19-24-46_2.jpeg" alt="photo">
                             </a>
                         </div>
                     </div>
