--- a/activities.html
+++ b/activities.html
@@ -36,6 +36,18 @@
                     <div>Next</div>
                 </div>
             </section>
+            <section>
+                <div class="carousel">
+                    <nav>
+                        <a href="#" id="carouselPrev">&#x2B05</a>   <!-- &lt -->
+                        <a href="#" id="carouselNext">&#x2B95</a>   <!-- &rt -->
+                    </nav>
+        
+                    <div class="carousel-images" id="carouselImages"></div>
+                    <div class="carousel-caption" id="carouselCaption"></div>
+        
+                </div>
+            </section>
         </main>
         <footer>
             <p>&copy Chris Wilton <!-- date --> </p>
