add css for carosel

--- a/activities.html
+++ b/activities.html
@@ -4,6 +4,7 @@
     <title>CW Software - Activities</title>
 
     <link href="css/style.css" rel="stylesheet" type="text/css" />
+    <link href="css/carosel.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
     <div class="wrapper">
