--- a/activities.html
+++ b/activities.html
@@ -5,7 +5,7 @@
 
     <link href="css/style.css" rel="stylesheet" type="text/css" />
     <link href="css/carosel.css" rel="stylesheet" type="text/css" />
-    <script defer src="js/carosel.js" type="text/js" />
+    <script defer src="js/carosel.js" type="text/js"></script>
 </head>
 <body>
     <div class="wrapper">
