--- a/activities.html
+++ b/activities.html
@@ -5,7 +5,7 @@
 
     <link href="css/style.css" rel="stylesheet" type="text/css" />
     <link href="css/carosel.css" rel="stylesheet" type="text/css" />
-    <script defer src="js/carosel.js" type="text/js"></script>
+    <script defer src="js/carosel.js" type="text/javascript"></script>
 </head>
 <body>
     <div class="wrapper">
@@ -39,10 +39,11 @@
                 </div>
             </section>
             <section>
+                <h2>Carosel</h2>
                 <div class="carousel">
                     <nav>
-                        <a href="#" id="carouselPrev">&#x2B05</a>   <!-- &lt -->
-                        <a href="#" id="carouselNext">&#x2B95</a>   <!-- &rt -->
+                        <a href="#" id="carouselPrev">&#x2B05;</a>   <!-- &lt -->
+                        <a href="#" id="carouselNext">&#x2B95;</a>   <!-- &rt -->
                     </nav>
         
                     <div class="carousel-images" id="carouselImages"></div>
@@ -52,7 +53,7 @@
             </section>
         </main>
         <footer>
-            <p>&copy Chris Wilton <!-- date --> </p>
+            <p>&copy; Chris Wilton <!-- date --> </p>
         </footer>
     </div>
 </body>
