--- a/activities.html
+++ b/activities.html
@@ -32,10 +32,11 @@
             <section>
                 <h2>My activities</h2>
                 <!-- carousel here -->
-                <div class="row">
-                    <div>Prev</div>
-                    <div>Photo</div>
-                    <div>Next</div>
+                <div class="carousel">
+                    <div class="prevButton">Prev</div>
+                    <div class="nextButton">Next</div>
+                    <div class="carouselImage" id="carousel-image">Photo</div>
+                    <div class="carouselCaption" id="carousel-caption">Caption</div>
                 </div>
             </section>
             <section>
