--- a/activities.html
+++ b/activities.html
@@ -41,7 +41,7 @@
             </section>
             <section>
                 <h2>Carosel</h2>
-                <div class="Carousel">
+                <div class="labCarousel">
                     <nav>
                         <a href="#" id="carouselPrev">&#x2B05;</a>   <!-- &lt -->
                         <a href="#" id="carouselNext">&#x2B95;</a>   <!-- &rt -->
