--- a/activities.html
+++ b/activities.html
@@ -33,8 +33,8 @@
                 <h2>My activities</h2>
                 <!-- carousel here -->
                 <div class="carousel">
-                    <div class="prevButton">Prev</div>
-                    <div class="nextButton">Next</div>
+                    <div class="prevButton" id="prev-button">Prev</div>
+                    <div class="nextButton" id="next-button">Next</div>
                     <div class="carouselImage" id="carousel-image">Photo</div>
                     <div class="carouselCaption" id="carousel-caption">Caption</div>
                 </div>
