--- a/activities.html
+++ b/activities.html
@@ -6,6 +6,7 @@
     <link href="css/style.css" rel="stylesheet" type="text/css" />
     <link href="css/carosel.css" rel="stylesheet" type="text/css" />
     <script defer src="js/carosel.js" type="text/javascript"></script>
+    <script defer src="js/gallery.js" type="text/javascript"></script>
 </head>
 <body>
     <div class="wrapper">
