--- a/activities.html
+++ b/activities.html
@@ -4,9 +4,8 @@
     <title>CW Software - Activities</title>
 
     <link href="css/style.css" rel="stylesheet" type="text/css" />
-    <!-- <link href="css/carosel.css" rel="stylesheet" type="text/css" /> -->
     <!-- <script defer src="js/carosel.js" type="text/javascript"></script> -->
-    <script defer src="js/gallery.js" type="text/javascript"></script>
+    <script defer src="js/carousel.js" type="text/javascript"></script>
 </head>
 <body>
     <div class="wrapper">
