--- a/music.html
+++ b/music.html
@@ -3,6 +3,7 @@
 <head>
     <title>CW Software - Music</title>
     <link href="css/style.css" rel="stylesheet" type="text/css" />
+    <script defer src="js/gallery.js" type="text/javascript"></script>
 </head>
 <body>
     <div class="wrapper">
