--- a/index.html
+++ b/index.html
@@ -48,6 +48,37 @@
             <section>
                 <h2>Swift</h2>
                 <code></code>
+                <div>
+                    <h3>Questionnaire App</h3>
+                        <p> A brief of the requirements:
+                        <ul>
+                            <li>Read a Questionnaire from a Json file</li>
+                            <li>Display each question in a single view with 
+                                buttons to navigate between the questions</li>
+                            <li>Save the completed Questionnaire results to the iOS device using Core Data</li>
+                            <li>Allow another user to complete the Questionnaire</li>
+                            <li>Display a report and summary of the results</li>
+                            <li>Allow user to answer via multiple methods such as: 
+                                single option; many options; an integer number eg sliderl and text </li>
+                            <li>Allow input from different Questionnaire Json files</li>
+                            <li>Allow for both portrait and landscape orientation</li>
+                        </ul>
+                        </p>
+                </div>
+                <div>
+                    <h3>Artworks on Campus App</h3>
+                    <p> A brief of the requirements:
+                        <ul>
+                            <li>Retrieve data about arworks from a Json file and store in core data</li>
+                            <li>Display a map centered at the users (or specified defaulted) location</li>
+                            <li>Annotate the map for each of the artworks (grouping when necessary)</li>
+                            <li>Show a table listing the artworks, grouped and ordered</li>
+                            <li>Reveal image and information on artwork when selected on map or table</li>
+                            <li>Syncronise app on startup to ensure accurate data loaded</li>
+                            <li>Allow for both portrait and landscape orientation</li>
+                        </ul>
+                        </p>
+                </div>
             </section>
         </main>
         <footer>
