--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
                 Java, Html, Swift, Apps, Programs, Computing,
                 Bangor, Gwynedd, North Wales" />
 <!--<meta http-equiv="Content-Type" content="text/html;charset=utf-8" />    -->
-
+    <script>sessionStorage.clear();</script>
     <link href="css/style.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
