--- a/activities.html
+++ b/activities.html
@@ -4,6 +4,7 @@
     <title>CW Software - Activities</title>
 
     <link href="css/style.css" rel="stylesheet" type="text/css" />
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet" />
     <!-- <script defer src="js/carosel.js" type="text/javascript"></script> -->
     <script defer src="js/carousel.js" type="text/javascript"></script>
 </head>
