--- a/professional.html
+++ b/professional.html
@@ -20,6 +20,15 @@
         <main>
             <!--Main content here-->
             <section>
+                <h2>Aout Me</h2>
+                <p>My name is Chris <!-- foaf: firstname --> and I'm a Software Engineer <!-- profession: software? -->
+                    based in Bangor, North Wales. <!-- place: Bangor --> I graduated from the University of Liverpool in 2018
+                    with a first class degree in Software Engineering. On this website, you can find out about my professional background, 
+                    my musical backgorund, the activities I enjoy, along with a showcase of some of my works. 
+                    <br />For more information, please <!-- link --> contact me.
+                </p>
+            </section>
+            <section>
                 <h2>Pre-computing life</h2>
                 <p>During my GCSEs and A-levels, I was never sure about what I wanted to do after school.
                     Going to University and getting student finance didn’t make sense to me when there was no overall goal to aim for.
