--- a/professional.html
+++ b/professional.html
@@ -20,7 +20,7 @@
         <main>
             <!--Main content here-->
             <section>
-                <h2>Aout Me</h2>
+                <h2>About Me</h2>
                 <p>My name is Chris <!-- foaf: firstname --> and I'm a Software Engineer <!-- profession: software? -->
                     based in Bangor, North Wales. <!-- place: Bangor --> I graduated from the University of Liverpool in 2018
                     with a first class degree in Software Engineering. On this website, you can find out about my professional background, 
