--- a/index.html
+++ b/index.html
@@ -2,21 +2,23 @@
 <html>
 <head>
     <title>CW Software - Showcase</title>
-    <!--<link rel="icon" href="logo.png" /> -->
+    <link rel="icon" href="img/310582_10150298576507232_4175852_n.jpg" type="image/gif" />
 
     <meta name="Author" content="Chrs Wilton" />
 	<meta name="Description" content="Software Developer in Gwynedd, North Wales" />
-	<meta name="keywords" content="Software, Development, Developer, Engineering, Engineer,
-                Java, Html, Swift, Apps, Programs, Computing,
-                Bangor, Gwynedd, North Wales" />
-<!--<meta http-equiv="Content-Type" content="text/html;charset=utf-8" />    -->
+	<meta name="keywords" content="Software Developer, Software Engineer,
+                Java, Html, Swift, Bangor, Gwynedd, North Wales" />
+    <!-- check these -->
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <script>sessionStorage.clear();</script>
     <link href="css/style.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
     <div class="wrapper">
         <header>
-            <h1>Title</h1>
+            <h1>CW Software</h1>
             <nav>
                 <ul>
                     <li><a href="index.html" class="this-page">my showcase</a></li>
@@ -68,7 +70,7 @@
                 <code></code>
                 <div>
                     <h3>Questionnaire App</h3>
-                        <p> A brief of the requirements:
+                        <p>A brief of the requirements:
                         <ul>
                             <li>Read a Questionnaire from a Json file</li>
                             <li>Display each question in a single view with 
@@ -85,7 +87,7 @@
                 </div>
                 <div>
                     <h3>Artworks on Campus App</h3>
-                    <p> A brief of the requirements:
+                    <p>A brief of the requirements:
                         <ul>
                             <li>Retrieve data about arworks from a Json file and store in core data</li>
                             <li>Display a map centered at the users (or specified defaulted) location</li>
