--- a/activities.html
+++ b/activities.html
@@ -3,6 +3,12 @@
 <head>
     <title>CW Software - Activities</title>
 
+    <meta name="Author" content="Chrs Wilton" />
+	<meta name="Description" content="Software Developer in Gwynedd, North Wales" />
+	<meta name="keywords" content="Software Developer, Software Engineer,
+                Java, Html, Swift, Bangor, Gwynedd, North Wales" />
+    <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
+
     <link href="css/style.css" rel="stylesheet" type="text/css" />
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet" />
     <!-- <script defer src="js/carosel.js" type="text/javascript"></script> -->
@@ -11,7 +17,7 @@
 <body>
     <div class="wrapper">
         <header>
-            <h1>Title</h1>
+            <h1>CW Software</h1>
             <nav>
                 <ul>
                     <li><a href="index.html">my showcase</a></li>
