--- a/music.html
+++ b/music.html
@@ -2,13 +2,20 @@
 <html>
 <head>
     <title>CW Software - Music</title>
+
+    <meta name="Author" content="Chrs Wilton" />
+	<meta name="Description" content="Software Developer in Gwynedd, North Wales" />
+	<meta name="keywords" content="Software Developer, Software Engineer,
+                Java, Html, Swift, Bangor, Gwynedd, North Wales" />
+    <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
+
     <link href="css/style.css" rel="stylesheet" type="text/css" />
     <script defer src="js/gallery.js" type="text/javascript"></script>
 </head>
 <body>
     <div class="wrapper">
         <header>
-            <h1>Title</h1>
+            <h1>CW Software</h1>
             <nav>
                 <ul>
                     <li><a href="index.html">my showcase</a></li>
