--- a/professional.html
+++ b/professional.html
@@ -67,7 +67,7 @@
             </section>
         </main>
         <footer>
-            <p>&copy Chris Wilton <!-- date --> </p>
+            <p>&copy; Chris Wilton <!-- date --> </p>
         </footer>
     </div>
 </body>
