--- a/music.html
+++ b/music.html
@@ -10,6 +10,7 @@
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 
     <link href="css/style.css" rel="stylesheet" type="text/css" />
+    <!-- <link href="assets/Batala.ttf" rel="stylesheet" type="font/ttf" />-->
     <script defer src="js/gallery.js" type="text/javascript"></script>
 </head>
 <body>
@@ -38,7 +39,7 @@
                     Joining Batala has been a huge influence on my life.</p>
             </section>
             <section>
-                <h2>Batala Mundo</h2>
+                <h2><span class="batala">BATALA</span> Mundo</h2>
                 <p>More info about Batala can be found on <a href="https://en.wikipedia.org/wiki/Batala_(music)" target="_blank">wikipedia</a>. <!-- link here --></p>
             </section>
             <section>
@@ -137,7 +138,7 @@
             </section>
         </main>
         <footer>
-            <p>&copy Chris Wilton <!-- date --> </p>
+            <p>&copy; Chris Wilton <!-- date --> </p>
         </footer>
     </div>
 </body>
