--- a/activities.html
+++ b/activities.html
@@ -12,6 +12,7 @@
     <link href="css/style.css" rel="stylesheet" type="text/css" />
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet" />
     <!-- <script defer src="js/carosel.js" type="text/javascript"></script> -->
+    <script defer src="js/dates.js" type="text/javascript"></script>
     <script defer src="js/carousel.js" type="text/javascript"></script>
 </head>
 <body>
@@ -20,8 +21,8 @@
             <h1>CW Software</h1>
             <nav>
                 <ul>
-                    <li><a href="index.html">my showcase</a></li>
-                    <li><a href="professional.html">career background</a></li>
+                    <li><a href="index.html">career background</a></li>
+                    <li><a href="showcase.html">my showcase</a></li>
                     <li><a href="activities.html" class="this-page">my activities</a></li>
                     <li><a href="music.html">music background</a></li>
                 </ul>
@@ -64,7 +65,9 @@
         -->
         </main>
         <footer>
-            <p>&copy; Chris Wilton <!-- date --> </p>
+            <p><span id="copyright"></span>
+                <span id="modified"></span>
+            </p>
         </footer>
     </div>
 </body>
