--- a/music.html
+++ b/music.html
@@ -11,6 +11,7 @@
 
     <link href="css/style.css" rel="stylesheet" type="text/css" />
     <!-- <link href="assets/Batala.ttf" rel="stylesheet" type="font/ttf" />-->
+    <script defer src="js/dates.js" type="text/javascript"></script>
     <script defer src="js/gallery.js" type="text/javascript"></script>
 </head>
 <body>
@@ -19,8 +20,8 @@
             <h1>CW Software</h1>
             <nav>
                 <ul>
-                    <li><a href="index.html">my showcase</a></li>
-                    <li><a href="professional.html">career background</a></li>
+                    <li><a href="index.html">career background</a></li>
+                    <li><a href="showcase.html">my showcase</a></li>
                     <li><a href="activities.html">my activities</a></li>
                     <li><a href="music.html" class="this-page">music background</a></li>
                 </ul>
@@ -138,7 +139,9 @@
             </section>
         </main>
         <footer>
-            <p>&copy; Chris Wilton <!-- date --> </p>
+            <p><span id="copyright"></span>
+                <span id="modified"></span>
+            </p>
         </footer>
     </div>
 </body>
