--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
                 Java, Html, Swift, Bangor, Gwynedd, North Wales" />
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 
+    <link rel="icon" href="img/310582_10150298576507232_4175852_n.jpg" type="image/gif" />
     <link href="css/style.css" rel="stylesheet" type="text/css" />
     <script defer src="js/dates.js" type="text/javascript"></script>
 </head>
