--- a/activities.html
+++ b/activities.html
@@ -9,8 +9,10 @@
                 Java, Html, Swift, Bangor, Gwynedd, North Wales" />
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 
+    <link rel="icon" href="img/310582_10150298576507232_4175852_n.jpg" type="image/gif" />
     <link href="css/style.css" rel="stylesheet" type="text/css" />
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet" />
+    
     <!-- <script defer src="js/carosel.js" type="text/javascript"></script> -->
     <script defer src="js/dates.js" type="text/javascript"></script>
     <script defer src="js/carousel.js" type="text/javascript"></script>
