--- a/music.html
+++ b/music.html
@@ -9,7 +9,9 @@
                 Java, Html, Swift, Bangor, Gwynedd, North Wales" />
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 
+    <link rel="icon" href="img/310582_10150298576507232_4175852_n.jpg" type="image/gif" />
     <link href="css/style.css" rel="stylesheet" type="text/css" />
+    
     <!-- <link href="assets/Batala.ttf" rel="stylesheet" type="font/ttf" />-->
     <script defer src="js/dates.js" type="text/javascript"></script>
     <script defer src="js/gallery.js" type="text/javascript"></script>
