--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 
     <link rel="icon" href="img/310582_10150298576507232_4175852_n.jpg" type="image/gif" />
     <link href="css/style.css" rel="stylesheet" type="text/css" />
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet" />
+    
     <script defer src="js/dates.js" type="text/javascript"></script>
 </head>
 <body>
@@ -28,7 +30,7 @@
         </header>
         <main>
             <!--Main content here-->
-            <section>
+            <section class="section1">
                 <h2>About Me</h2>
                 <p>Welcome! 
                     <br />My name is Chris,<!-- foaf: firstname --> 
@@ -43,14 +45,14 @@
                     <br />For more information, please <a href="mailto:chw20vvb@bangor.ac.uk?Subject=Find%20out%20more">contact me</a>.
                 </p>
             </section>
-            <section>
+            <section class="section2">
                 <h2 id="backgorund">Pre-computing life</h2>
                 <p>During my GCSEs and A-levels, I was never sure about what I wanted to do after school.
                     Going to University and getting student finance didn’t make sense to me when there was no overall goal to aim for.
                     After my levels A-Ievels I did a year motor vehicle before getting a job in manufacturing engineering for almost 10 years.
                 </p>
             </section>
-            <section>
+            <section class="section1">
                 <h2>My introduction to computing</h2>
                 <p>My first experience with computing languages was when I saw my yahoo account came with Geocities (Wow that’s a blast from the past, right), 
                     which allowed you to create your own webpage for no cost, so I thought I’d give it a go. 
@@ -60,7 +62,7 @@
                     So I thought I would learn more about html using geocities help and quackit tutorials and try to create one.
                     </p>
             </section>
-            <section>
+            <section class="section2">
                 <h2>Turning computing into a career</h2>
                 <p>Deciding to leave my job to pursue a career in computing with only a basic understanding of html as a background of the field was quite a daunting choice. 
                     However, an Associates Degree included a vast range of modules from Maths and English to Business and Accounting which meant should the subject major not be suitable, 
@@ -69,7 +71,7 @@
                     I am now continuing my studies to do a MSc in Computing.
                     </p>
             </section>
-            <section>
+            <section class="section1">
                 <h2>Showcase</h2>
                 <p>To see some samples of my work, go to the <a href="showcase.html">showcase page</a>.</p>
             </section>
