--- a/activities.html
+++ b/activities.html
@@ -13,6 +13,7 @@
     <link href="css/style.css" rel="stylesheet" type="text/css" />
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css2?family=PT+Sans&display=swap" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet" />
     
     <!-- <script defer src="js/carosel.js" type="text/javascript"></script> -->
     <script defer src="js/dates.js" type="text/javascript"></script>
@@ -33,7 +34,7 @@
         </header>
         <main>
             <!--Main content here-->
-            <section>
+            <section class="section1">
                 <h2>My active backgorund</h2>
                 <p>All my life, I have usually had some form of ativity in my free time. As a kid I played footy, rugby, golf, cricket, and went fishing with friends.
                     At secondary school I played football, hockey and participated in athletics and cross-country running.
@@ -42,7 +43,7 @@
                     I have also done a few different style of dances like hip hop, african, salsa and bachata dancing. 
                 </p>
             </section>
-            <section>
+            <section class="section2">
                 <h2>My activities</h2>
                 <!-- carousel here -->
                 <div class="carousel">
