--- a/showcase.html
+++ b/showcase.html
@@ -13,6 +13,7 @@
 
     <link rel="icon" href="img/310582_10150298576507232_4175852_n.jpg" type="image/gif" />
     <link href="css/style.css" rel="stylesheet" type="text/css" />
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet" />
 
     <script defer src="js/dates.js" type="text/javascript"></script>
 </head>
@@ -31,7 +32,7 @@
         </header>
         <main>
             <!--Main content here-->
-            <section>
+            <section class="section1">
                 <h2>My prgoramming style</h2>
                 <p>During my studies in software development I have done several assignments and projects
                     using a variety of programming languages. 
@@ -39,7 +40,7 @@
                     with a few examples of the assignments/projects I've completed.
                 </p>
             </section>
-            <section>
+            <section class="section2">
                 <h2>Java based assignemnts</h2>
                 <code></code>
                 <p>
@@ -56,7 +57,7 @@
                     </ul>
                 </p>
             </section>
-            <section>
+            <section class="section1">
                 <h2>Web based assignemnts and projects</h2>
                 <code></code>
                 <p> 
@@ -71,7 +72,7 @@
                 </p>
 
             </section>
-            <section>
+            <section class="section2">
                 <h2>Swift based assignemnts</h2>
                 <code></code>
                 <div>
