--- a/activities.html
+++ b/activities.html
@@ -17,7 +17,7 @@
     
     <!-- <script defer src="js/carosel.js" type="text/javascript"></script> -->
     <script defer src="js/dates.js" type="text/javascript"></script>
-    <script defer src="js/carousel.js" type="text/javascript"></script>
+    <script defer src="js/carousel.js"></script>
 </head>
 <body>
     <div class="wrapper">
