--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <link rel="icon" href="img/310582_10150298576507232_4175852_n.jpg" type="image/gif" />
     <link href="css/style.css" rel="stylesheet" type="text/css" />
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet" />
-    
-    <script defer src="js/dates.js" type="text/javascript"></script>
+
+    <script defer src="js/dates.js"></script> <!--  type="text/javascript" unnecessay -->
 </head>
 <body>
     <div class="wrapper">
