--- a/music.html
+++ b/music.html
@@ -14,8 +14,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet" />
     
     <!-- <link href="assets/Batala.ttf" rel="stylesheet" type="font/ttf" />-->
-    <script defer src="js/dates.js" type="text/javascript"></script>
-    <script defer src="js/gallery.js" type="text/javascript"></script>
+    <script defer src="js/dates.js"></script>
+    <script defer src="js/gallery.js"></script>
 </head>
 <body>
     <div class="wrapper">
