--- a/showcase.html
+++ b/showcase.html
@@ -15,7 +15,7 @@
     <link href="css/style.css" rel="stylesheet" type="text/css" />
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet" />
 
-    <script defer src="js/dates.js" type="text/javascript"></script>
+    <script defer src="js/dates.js"></script>
 </head>
 <body>
     <div class="wrapper">
