--- a/activities.html
+++ b/activities.html
@@ -16,7 +16,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet" />
     
     <!-- <script defer src="js/carosel.js" type="text/javascript"></script> -->
-    <script defer src="js/dates.js" type="text/javascript"></script>
+    <script defer src="js/dates.js"></script>
     <script defer src="js/carousel.js"></script>
 </head>
 <body>
