--- a/version2/about.html
+++ b/version2/about.html
@@ -21,7 +21,7 @@
             <h1>CW Software</h1>
             <nav>
                 <ul>
-                    <li><a href="index.html" class="this-page">career background</a></li>
+                    <li><a href="about.html" class="this-page">career background</a></li>
                     <li><a href="showcase.html">my showcase</a></li>
                     <li><a href="activities.html">my activities</a></li>
                     <li><a href="music.html">music background</a></li>
