--- a/version2/activities.html
+++ b/version2/activities.html
@@ -25,7 +25,7 @@
             <h1>CW Software</h1>
             <nav>
                 <ul>
-                    <li><a href="index.html">career background</a></li>
+                    <li><a href="about.html">career background</a></li>
                     <li><a href="showcase.html">my showcase</a></li>
                     <li><a href="activities.html" class="this-page">my activities</a></li>
                     <li><a href="music.html">music background</a></li>
