--- a/version2/showcase.html
+++ b/version2/showcase.html
@@ -23,7 +23,7 @@
             <h1>CW Software</h1>
             <nav>
                 <ul>
-                    <li><a href="index.html">career background</a></li>
+                    <li><a href="about.html">career background</a></li>
                     <li><a href="showcase.html" class="this-page">my showcase</a></li>
                     <li><a href="activities.html">my activities</a></li>
                     <li><a href="music.html">music background</a></li>
