--- a/version2/activities.html
+++ b/version2/activities.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <title>CW Software - Activities</title>
 
@@ -7,17 +7,16 @@
 	<meta name="Description" content="Software Developer in Gwynedd, North Wales" />
 	<meta name="keywords" content="Software Developer, Software Engineer,
                 Java, Html, Swift, Bangor, Gwynedd, North Wales" />
-    <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="icon" href="img/310582_10150298576507232_4175852_n.jpg" type="image/gif" />
-    <link href="css/style.css" rel="stylesheet" type="text/css" />
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet" />
-    <link href="https://fonts.googleapis.com/css2?family=PT+Sans&display=swap" rel="stylesheet" />
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet" />
+    <link rel="icon" href="img/310582_10150298576507232_4175852_n.jpg" type="image/gif" />                  <!-- add logo to tab -->
+    <link href="css/style.css" rel="stylesheet" type="text/css" />                                          <!-- add css file -->
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet" />  <!-- add font -->
     
-    <!-- <script defer src="js/carosel.js" type="text/javascript"></script> -->
-    <script defer src="js/dates.js"></script>
-    <script defer src="js/carousel.js"></script>
+    <!-- add javascript files for dates and carousel -->
+    <script defer src="js/dates.js"></script>       <!-- type="text/javascript" unnecessay -->
+    <script defer src="js/carousel.js"></script>    <!-- type="text/javascript" unnecessay -->
 </head>
 <body>
     <div class="wrapper">
