--- a/version2/showcase.html
+++ b/version2/showcase.html
@@ -44,7 +44,6 @@
             <section class="section2">
                 <h2>Java based assignemnts</h2>
                 <code></code>
-                <p>
                     <ul>
                         <li>Comp104 A: Office Lounge-manager-secretary</li>
                         <li>Comp106 A2: Website</li>
@@ -56,12 +55,10 @@
                         <li>Comp213 A1: Card Game</li>
                         <li>Comp213 A2: Multi client-server chat room</li>
                     </ul>
-                </p>
             </section>
             <section class="section1">
                 <h2>Web based assignemnts and projects</h2>
                 <code></code>
-                <p> 
                     <ul>
                         <li>Comp106 A2: website</li>
                         <li>Comp284 A1: Perl & CGI - XML database library</li>
@@ -70,15 +67,13 @@
                         <li>Batala: xhtml</li>
                         <li>Batala: php</li>
                 </ul>
-                </p>
-
             </section>
             <section class="section2">
                 <h2>Swift based assignemnts</h2>
                 <code></code>
                 <div>
                     <h3>Questionnaire App</h3>
-                        <p>A brief of the requirements:
+                        <p>A brief of the requirements: </p>
                         <ul>
                             <li>Read a Questionnaire from a Json file</li>
                             <li>Display each question in a single view with 
@@ -91,11 +86,10 @@
                             <li>Allow input from different Questionnaire Json files</li>
                             <li>Allow for both portrait and landscape orientation</li>
                         </ul>
-                        </p>
                 </div>
                 <div>
                     <h3>Artworks on Campus App</h3>
-                    <p>A brief of the requirements:
+                    <p>A brief of the requirements: </p>
                         <ul>
                             <li>Retrieve data about arworks from a Json file and store in core data</li>
                             <li>Display a map centered at the users (or specified defaulted) location</li>
@@ -105,7 +99,6 @@
                             <li>Syncronise app on startup to ensure accurate data loaded</li>
                             <li>Allow for both portrait and landscape orientation</li>
                         </ul>
-                        </p>
                 </div>
             </section>
         </main>
