--- a/version2/showcase.html
+++ b/version2/showcase.html
@@ -103,8 +103,19 @@
             </section>
         </main>
         <footer>
-            <p><span id="copyright"></span>
-                <span id="modified"></span>
+            <p>
+                <a href="https://jigsaw.w3.org/css-validator/check/referer" class="validator">
+                    <img style="border:0;width:88px;height:31px"
+                        src="https://jigsaw.w3.org/css-validator/images/vcss-blue"
+                        alt="Valid CSS!" />
+                </a>
+                <span class="siteInfo">
+                    <span id="copyright"></span>
+                    <span id="modified"></span>
+                </span>
+                <a href="https://www.linkedin.com/in/chris-wilton" class="linkedIn">
+                    <i class="fab fa-linkedin"></i>
+                </a>
             </p>
         </footer>
     </div>
