--- a/version2/music.html
+++ b/version2/music.html
@@ -13,6 +13,7 @@
     <link rel="icon" href="img/310582_10150298576507232_4175852_n.jpg" type="image/gif" />                  <!-- add logo to tab -->
     <link href="css/style.css" rel="stylesheet" type="text/css" />                                          <!-- add css file -->
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet" />  <!-- add font -->
+    <link href="https://use.fontawesome.com/releases/v5.12.0/css/all.css" rel="stylesheet" crossorigin="anonymous" />
     <!-- <link href="assets/Batala.ttf" rel="stylesheet" type="font/ttf" />-->
 
     <!-- add javascript files for dates and gallery -->
