--- a/version2/showcase.html
+++ b/version2/showcase.html
@@ -14,7 +14,8 @@
     <link rel="icon" href="img/310582_10150298576507232_4175852_n.jpg" type="image/gif" />                  <!-- add logo to tab -->
     <link href="css/style.css" rel="stylesheet" type="text/css" />                                          <!-- add css file -->
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet" />  <!-- add font -->
-
+    <link href="https://use.fontawesome.com/releases/v5.12.0/css/all.css" rel="stylesheet" crossorigin="anonymous" />
+    
     <!-- add javascript file for dates -->
     <script defer src="js/dates.js"></script>   <!-- type="text/javascript" unnecessay -->
 </head>
