--- a/version2/music.html
+++ b/version2/music.html
@@ -55,7 +55,14 @@
             </section>
             <section class="section1">
                 <h2>Batala Mundo</h2>
-                <p>More info about Batala can be found on <a href="https://en.wikipedia.org/wiki/Batala_(music)" target="_blank">wikipedia</a>. <!-- link here --></p>
+                <p>More info about Batala can be found on <a href="https://en.wikipedia.org/wiki/Batala_(music)" target="_blank">wikipedia</a>. <!-- link here -->
+                    <br />Here is a video of Batala Mundo playing at Notting Hill Carnival in 2017.
+                
+                </p>
+                <iframe class="video" width="560" height="315" src="https://www.youtube.com/embed/LzFXLNpGWV0" 
+                    title="YouTube video player" frameborder="0" 
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+                </iframe>
             </section>
             <section class="section2">
                 <h2>My favorite moments from Brazil</h2>
