--- a/version2/music.html
+++ b/version2/music.html
@@ -60,7 +60,7 @@
                 
                 </p>
                 <iframe class="video" width="560" height="315" src="https://www.youtube.com/embed/LzFXLNpGWV0" 
-                    title="YouTube video player" frameborder="0" 
+                    title="YouTube video player" 
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
                 </iframe>
             </section>
