show and hide projects

--- a/version2/showcase.html
+++ b/version2/showcase.html
@@ -15,7 +15,7 @@
     <link href="css/style.css" rel="stylesheet" type="text/css" />                                          <!-- add css file -->
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet" />  <!-- add font -->
     <link href="https://use.fontawesome.com/releases/v5.12.0/css/all.css" rel="stylesheet" crossorigin="anonymous" />
-    
+
     <!-- add javascript file for dates -->
     <script defer src="js/dates.js"></script>   <!-- type="text/javascript" unnecessay -->
 </head>
@@ -45,61 +45,62 @@
             <section class="section2">
                 <h2>Java based assignemnts</h2>
                 <code></code>
-                    <ul>
-                        <li>Comp104 A: Office Lounge-manager-secretary</li>
-                        <li>Comp106 A2: Website</li>
-                        <li>Comp106 A3: GUI Cash machine</li>
-                        <li>Comp211 A1: Email Client</li>
-                        <li>Comp211 A2: Data transfer protocol</li>
-                        <li>Comp212 A1: Client-server Voting</li>
-                        <li>Comp212 A2: Word counter</li>
-                        <li>Comp213 A1: Card Game</li>
-                        <li>Comp213 A2: Multi client-server chat room</li>
-                    </ul>
+                <ul>
+                    <li>Comp104 A: Office Lounge-manager-secretary</li>
+                    <li>Comp106 A2: Website</li>
+                    <li>Comp106 A3: GUI Cash machine</li>
+                    <li>Comp211 A1: Email Client</li>
+                    <li>Comp211 A2: Data transfer protocol</li>
+                    <li>Comp212 A1: Client-server Voting</li>
+                    <li>Comp212 A2: Word counter</li>
+                    <li>Comp213 A1: Card Game</li>
+                    <li>Comp213 A2: Multi client-server chat room</li>
+                </ul>
             </section>
             <section class="section1">
                 <h2>Web based assignemnts and projects</h2>
                 <code></code>
-                    <ul>
-                        <li>Comp106 A2: website</li>
-                        <li>Comp284 A1: Perl & CGI - XML database library</li>
-                        <li>Comp284 A2: PHP evening course booking system</li>
-                        <li>Comp284 A3: JS Killer Submarine game</li>
-                        <li>Batala: xhtml</li>
-                        <li>Batala: php</li>
+                <ul>
+                    <li>Comp106 A2: website</li>
+                    <li>Comp284 A1: Perl & CGI - XML database library</li>
+                    <li>Comp284 A2: PHP evening course booking system</li>
+                    <li>Comp284 A3: JS Killer Submarine game</li>
+                    <li>Batala: xhtml</li>
+                    <li>Batala: php</li>
                 </ul>
             </section>
             <section class="section2">
                 <h2>Swift based assignemnts</h2>
                 <code></code>
-                <div>
+                <div id="project">
+                    <span>Hover over projects to view description</span>
                     <h3>Questionnaire App</h3>
-                        <p>A brief of the requirements: </p>
-                        <ul>
-                            <li>Read a Questionnaire from a Json file</li>
-                            <li>Display each question in a single view with 
-                                buttons to navigate between the questions</li>
-                            <li>Save the completed Questionnaire results to the iOS device using Core Data</li>
-                            <li>Allow another user to complete the Questionnaire</li>
-                            <li>Display a report and summary of the results</li>
-                            <li>Allow user to answer via multiple methods such as: 
-                                single option; many options; an integer number eg sliderl and text </li>
-                            <li>Allow input from different Questionnaire Json files</li>
-                            <li>Allow for both portrait and landscape orientation</li>
-                        </ul>
+                    <p>A brief of the requirements: </p>
+                    <ul>
+                        <li>Read a Questionnaire from a Json file</li>
+                        <li>Display each question in a single view with 
+                            buttons to navigate between the questions</li>
+                        <li>Save the completed Questionnaire results to the iOS device using Core Data</li>
+                        <li>Allow another user to complete the Questionnaire</li>
+                        <li>Display a report and summary of the results</li>
+                        <li>Allow user to answer via multiple methods such as: 
+                            single option; many options; an integer number eg sliderl and text </li>
+                        <li>Allow input from different Questionnaire Json files</li>
+                        <li>Allow for both portrait and landscape orientation</li>
+                    </ul>
                 </div>
-                <div>
+                <div id="project">
                     <h3>Artworks on Campus App</h3>
                     <p>A brief of the requirements: </p>
-                        <ul>
-                            <li>Retrieve data about arworks from a Json file and store in core data</li>
-                            <li>Display a map centered at the users (or specified defaulted) location</li>
-                            <li>Annotate the map for each of the artworks (grouping when necessary)</li>
-                            <li>Show a table listing the artworks, grouped and ordered</li>
-                            <li>Reveal image and information on artwork when selected on map or table</li>
-                            <li>Syncronise app on startup to ensure accurate data loaded</li>
-                            <li>Allow for both portrait and landscape orientation</li>
-                        </ul>
+                    <ul>
+                        <li>Retrieve data about arworks from a Json file and store in core data</li>
+                        <li>Display a map centered at the users (or specified defaulted) location</li>
+                        <li>Annotate the map for each of the artworks (grouping when necessary)</li>
+                        <li>Show a table listing the artworks, grouped and ordered</li>
+                        <li>Reveal image and information on artwork when selected on map or table</li>
+                        <li>Syncronise app on startup to ensure accurate data loaded</li>
+                        <li>Allow for both portrait and landscape orientation</li>
+                    </ul>
                 </div>
             </section>
         </main>
