--- a/band/gallery.html
+++ b/band/gallery.html
@@ -3,7 +3,7 @@
 <head>
     <title>CW Software - Professional</title>
 
-    <link href="css/style.css" rel="stylesheet" type="text/css" />
+    <link href="css/gallery.css" rel="stylesheet" type="text/css" />
 
     <script defer src="js/gallery.js"></script> <!-- type="text/javascript" unnecessay -->
 </head>
