--- a/band/home.html
+++ b/band/home.html
@@ -3,7 +3,7 @@
 <head>
     <title>CW Software - Professional</title>
 
-    <link href="css/style.css" rel="stylesheet" type="text/css" />
+    <link href="css/carousel.css" rel="stylesheet" type="text/css" />
 
     <script defer src="js/carousel.js"></script> <!--  type="text/javascript" unnecessay -->
 </head>
