--- a/band/gallery.html
+++ b/band/gallery.html
@@ -8,6 +8,7 @@
     <script defer src="js/gallery.js"></script> <!-- type="text/javascript" unnecessay -->
 </head>
 <body>
+    <h2>Some of our favorite moments</h2>
     <div class="galleryFrame" id="gallery-frame">
         <div class="galleryRow" id="row1"></div>
         <div class="galleryRow" id="row2"></div>
