--- a/band/gallery.html
+++ b/band/gallery.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>CW Software - Professional</title>
+    <title>Gallery example</title>
 
     <link href="css/gallery.css" rel="stylesheet" type="text/css" />
+    <link href="css/style.css" rel="stylesheet" type="text/css" />
 
     <script defer src="js/gallery.js"></script> <!-- type="text/javascript" unnecessay -->
 </head>
 <body>
-    <h2>Some of our favorite moments</h2>
+    <div class="header">
+        <h2>Some of our favorite moments</h2>
+    </div>
     <div class="galleryFrame" id="gallery-frame">
         <div class="galleryRow" id="row1"></div>
         <div class="galleryRow" id="row2"></div>
