--- a/band/home.html
+++ b/band/home.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>CW Software - Professional</title>
+    <title>Home example</title>
 
     <link href="css/carousel.css" rel="stylesheet" type="text/css" />
+    <link href="css/style.css" rel="stylesheet" type="text/css" />
 
     <script defer src="js/carousel.js"></script> <!--  type="text/javascript" unnecessay -->
 </head>
 <body>
+    <div class="header">
+        <h2>Photos</h2>
+    </div>
     <div class="carousel">
         <div class="prevButton button" id="prev-button">Prev</div>
         <div class="nextButton button" id="next-button">Next</div>
