--- a/band/map.html
+++ b/band/map.html
@@ -5,11 +5,14 @@
 
     <link href="css/style.css" rel="stylesheet" type="text/css" />
 
-    <script defer src="js/carousel.js"></script> <!--  type="text/javascript" unnecessay -->
+    <script defer src="js/map.js"></script> <!--  type="text/javascript" unnecessay -->
 </head>
 <body>
     <div class="header">
         <h2>Map of rehearsal</h2>
+    </div>
+    <div class="location">
+        location
     </div>
     <div class="map">
         map
