--- a/band/map.html
+++ b/band/map.html
@@ -14,6 +14,9 @@
     <div class="location">
         location
     </div>
+    <div class ="distance">
+        distance
+    </div>
     <div class="map">
         map
     </div>
