--- a/band/map.html
+++ b/band/map.html
@@ -11,13 +11,13 @@
     <div class="header">
         <h2>Map of rehearsal</h2>
     </div>
-    <div class="location">
+    <div class="location" id="location">
         location
     </div>
-    <div class ="distance">
+    <div class ="distance" id="distance">
         distance
     </div>
-    <div class="map">
+    <div class="map" id="map">
         map
     </div>
 </body>
