--- a/band/map.html
+++ b/band/map.html
@@ -6,6 +6,7 @@
     <link href="css/style.css" rel="stylesheet" type="text/css" />
 
     <script defer src="js/map.js"></script> <!--  type="text/javascript" unnecessay -->
+    <script src="http://maps.google.com/maps/api/js?sensor=true"></script>
 </head>
 <body>
     <div class="header">
