--- a/band/map.html
+++ b/band/map.html
@@ -6,7 +6,7 @@
     <link href="css/style.css" rel="stylesheet" type="text/css" />
 
     <script defer src="js/map.js"></script> <!--  type="text/javascript" unnecessay -->
-    <script src="https://maps.google.com/maps/api/js?sensor=true"></script>
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDyG6ZPubeP1eTp12Hzazygjr484kdc1RQ&callback=initMap"></script>
 </head>
 <body>
     <div class="header">
