--- a/band/map.html
+++ b/band/map.html
@@ -6,7 +6,8 @@
     <link href="css/style.css" rel="stylesheet" type="text/css" />
 
     <script defer src="js/map.js"></script> <!--  type="text/javascript" unnecessay -->
-    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDyG6ZPubeP1eTPI2Hzazygjr484kdc1RQ&callback=initMap&libraries=&v=weekly"></script>
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBRVyfspaq-1UxBNhIxCcqMoRj-4MX_Ihc&callback=initMap&libraries=&v=weekly"></script>
+    <!-- AIzaSyDyG6ZPubeP1eTPI2Hzazygjr484kdc1RQ -->
 </head>
 <body>
     <div class="header">
