--- a/seawatcher/test.html
+++ b/seawatcher/test.html
@@ -1,3 +1,5 @@
+<script defer src="/test.js"></script>
+
 <button id = "find-me">Show my location</button><br/>
 <p id = "status"></p>
 <a id = "map-link" target="_blank"></a>
