--- a/seawatcher/test.html
+++ b/seawatcher/test.html
@@ -10,19 +10,16 @@
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 
     <link rel="icon" href="img/310582_10150298576507232_4175852_n.jpg" type="image/gif" />
-    <link href="css/style.css" rel="stylesheet" type="text/css" />
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet" />
-    <link href="https://fonts.googleapis.com/css2?family=PT+Sans&display=swap" rel="stylesheet" />
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet" />
     
     <!-- <script defer src="js/carosel.js" type="text/javascript"></script> -->
-    <script defer src="js/dates.js"></script>
-    <script defer src="js/carousel.js"></script>
+    <script defer src="/test.js"></script>
+    
 </head>
 <body>
-
-<script defer src="/test.js"></script>
 
 <button id = "find-me">Show my location</button><br/>
 <p id = "status"></p>
 <a id = "map-link" target="_blank"></a>
+
+</body>
+</html>
