--- a/seawatcher/test.html
+++ b/seawatcher/test.html
@@ -12,7 +12,7 @@
     <link rel="icon" href="img/310582_10150298576507232_4175852_n.jpg" type="image/gif" />
     
     <!-- <script defer src="js/carosel.js" type="text/javascript"></script> -->
-    <script defer src="/test.js"></script>
+    <script src="/test.js"></script>
     
 </head>
 <body>
