--- a/seawatcher/test.html
+++ b/seawatcher/test.html
@@ -13,6 +13,7 @@
     
     <!-- <script defer src="js/carosel.js" type="text/javascript"></script> -->
     <script defer src="test.js"></script>
+    <script defer src="test1.js"></script>
     
 </head>
 <body>
