--- a/seawatcher/test.html
+++ b/seawatcher/test.html
@@ -12,8 +12,9 @@
     <link rel="icon" href="img/310582_10150298576507232_4175852_n.jpg" type="image/gif" />
     
     <!-- <script defer src="js/carosel.js" type="text/javascript"></script> -->
-    <script defer type='module' src="test.js"></script>
-    <script defer type='module' src="test1.js"></script>
+    <!-- type='module' -->
+    <script defer src="test.js"></script>
+    <script defer src="test1.js"></script>
     
 </head>
 <body>
