--- a/seawatcher/test2.html
+++ b/seawatcher/test2.html
@@ -13,7 +13,7 @@
 
   <body>
     <a-scene vr-mode-ui="enabled: false" arjs="sourceType: webcam; videoTexture: true; debugUIEnabled: false;">
-      <a-text value="This content will always face you." look-at="[gps-camera]" scale="120 120 120" gps-entity-place="latitude: 53.22597071349516; longitude:  -4.127555930547311;"></a-text>
+      <a-text id="text" value="This content will always face you." look-at="[gps-camera]" scale="120 120 120" gps-entity-place="latitude: 53.22597071349516; longitude:  -4.127555930547311;"></a-text>
       <a-camera gps-camera rotation-reader> 
         <a-entity line="start: -1 -2 -3; end: -1 2 -3; color: red" 
                   line__2="start: -1.3 -1.7 -3; end: -1 -1.7 -3; color: red"
