--- a/seawatcher/test2.html
+++ b/seawatcher/test2.html
@@ -9,6 +9,7 @@
     <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar-nft.js"></script>
     
     <script defer src="test2.js"></script>
+    <script defer src="ruler.js"></script>
   </head>
 
   <body>
