--- a/seawatcher/test2.html
+++ b/seawatcher/test2.html
@@ -30,5 +30,6 @@
     <script defer src="test2.js"></script>
     <script defer src="RulerModel.js"></script>
     <script defer src="RulerContoller.js"></script>
+    <script defer src="LocationModel.js"></script>
   </body>
 </html>
