--- a/seawatcher/test2.html
+++ b/seawatcher/test2.html
@@ -27,7 +27,7 @@
       </a-camera>
       
     </a-scene>
-    <script defer src="test2.js"></script>
+    <!-- <script defer src="test2.js"></script> -->
     <script defer src="RulerModel.js"></script>
     <script defer src="RulerContoller.js"></script>
     <script defer src="LocationModel.js"></script>
