--- a/seawatcher/test2.html
+++ b/seawatcher/test2.html
@@ -11,7 +11,7 @@
     
   </head>
 
-  <body>
+  <body id="body">
     <a-scene vr-mode-ui="enabled: false" arjs="sourceType: webcam; videoTexture: true; debugUIEnabled: false;">
       <a-text id="text" value="This content will always face you." look-at="[gps-camera]" scale="120 120 120" gps-entity-place="latitude: 53.22597071349516; longitude:  -4.127555930547311;"></a-text>
       <a-camera id="camera" gps-camera rotation-reader> 
