--- a/seawatcher/test2.html
+++ b/seawatcher/test2.html
@@ -8,10 +8,10 @@
     <script src="https://unpkg.com/aframe-look-at-component@0.8.0/dist/aframe-look-at-component.min.js"></script>
     <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar-nft.js"></script>
     
-    <script src="View.js"></script>
-    <script src="RulerModel.js"></script>
-    <script src="LocationModel.js"></script>
-    <script src="RulerContoller.js"></script>
+    <script defer src="View.js"></script>
+    <script defer src="RulerModel.js"></script>
+    <script defer src="LocationModel.js"></script>
+    <script defer src="RulerContoller.js"></script>
     
   </head>
 
