--- a/seawatcher/test2.html
+++ b/seawatcher/test2.html
@@ -12,6 +12,7 @@
     <script defer src="RulerModel.js"></script>
     <script defer src="LocationModel.js"></script>
     <script defer src="RulerContoller.js"></script>
+    <script defer src="device.js"></script>
     
   </head>
 
