--- a/seawatcher/seawatcher.html
+++ b/seawatcher/seawatcher.html
@@ -12,7 +12,7 @@
     <script defer src="RulerModel.js"></script>
     <script defer src="LocationModel.js"></script>
     <script defer src="RulerContoller.js"></script>
-    <script defer src="device.js"></script>
+    <script defer src="DeviceModel.js"></script>
     
   </head>
 
