--- a/seawatcher/seawatcher.html
+++ b/seawatcher/seawatcher.html
@@ -1,7 +1,14 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8" />
+    <meta name="Author" content="Chrs Wilton" />
+	  <meta name="Description" content="Range Finder Using AR" />
+	  <meta name="keywords" content="Range Finder, Sea Watcher Foundation, AR" />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <link rel="icon" href="img/310582_10150298576507232_4175852_n.jpg" type="image/gif" />                  <!-- add logo to tab -->
+    
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>GeoAR.js demo</title>
     <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
