--- a/seawatcher/seawatcher.html
+++ b/seawatcher/seawatcher.html
@@ -2,12 +2,12 @@
 <html>
   <head>
     <meta name="Author" content="Chrs Wilton" />
-	  <meta name="Description" content="Range Finder Using AR" />
-	  <meta name="keywords" content="Range Finder, Sea Watcher Foundation, AR" />
+    <meta name="Description" content="Range Finder Using AR" />
+    <meta name="keywords" content="Range Finder, Sea Watcher Foundation, AR" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="icon" href="img/310582_10150298576507232_4175852_n.jpg" type="image/gif" />                  <!-- add logo to tab -->
+    <link rel="icon" href="iIMG_2305.jpeg" type="image/gif" />                  <!-- add logo to tab -->
     
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>GeoAR.js demo</title>
