--- a/seawatcher/seawatcher.html
+++ b/seawatcher/seawatcher.html
@@ -7,7 +7,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="icon" href="iIMG_2305.jpeg" type="image/gif" />                  <!-- add logo to tab -->
+    <link rel="icon" href="img/iIMG_2305.jpeg" type="image/gif" />                  <!-- add logo to tab -->
     
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>GeoAR.js demo</title>
