--- a/seawatcher/seawatcher.html
+++ b/seawatcher/seawatcher.html
@@ -18,7 +18,7 @@
     <script defer src="View.js"></script>
     <script defer src="RulerModel.js"></script>
     <script defer src="LocationModel.js"></script>
-    <script defer src="RulerContoller.js"></script>
+    <script defer src="RulerController.js"></script>
     <script defer src="DeviceModel.js"></script>
     
   </head>
