--- a/seawatcher/seawatcher.html
+++ b/seawatcher/seawatcher.html
@@ -16,6 +16,7 @@
     <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar-nft.js"></script>
     
     <script defer src="View.js"></script>
+    <script defer src="DeviceModel.js"></script>
     <script defer src="RulerModel.js"></script>
     <script defer src="LocationModel.js"></script>
     <script defer src="RulerController.js"></script>
