--- a/seawatcher/Version2/seawatcher.html
+++ b/seawatcher/Version2/seawatcher.html
@@ -15,7 +15,7 @@
     <script src="https://unpkg.com/aframe-look-at-component@0.8.0/dist/aframe-look-at-component.min.js"></script>
     <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar-nft.js"></script>
     
-    <script defer src="View.js"></script>
+    <script defer src="js/View.js"></script>
     <!--
     <script defer src="DeviceModel.js"></script>
     <script defer src="RulerModel.js"></script>
