--- a/seawatcher/Version2/seawatcher.html
+++ b/seawatcher/Version2/seawatcher.html
@@ -23,6 +23,8 @@
     <script defer src="RulerController.js"></script>
     -->
     
+    <link rel="css" href"/css/" />
+    
   </head>
 
   <body id="body">
