--- a/seawatcher/Version2/seawatcher.html
+++ b/seawatcher/Version2/seawatcher.html
@@ -23,7 +23,7 @@
     <script defer src="RulerController.js"></script>
     -->
     
-    <link rel="css" href"/css/ruler.css" />
+    <link href"/css/ruler.css" rel="stylesheet" type="text/css" />
     
   </head>
 
