--- a/band/gallery.html
+++ b/band/gallery.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang='en'>
 <head>
     <title>Gallery example</title>
 
-    <link href="css/gallery.css" rel="stylesheet" type="text/css" />
-    <link href="css/style.css" rel="stylesheet" type="text/css" />
+    <link href="css/gallery.css" rel="stylesheet" type="text/css" >
+    <link href="css/style.css" rel="stylesheet" type="text/css" >
 
     <script defer src="js/gallery.js"></script> <!-- type="text/javascript" unnecessay -->
 </head>
