--- a/band/template.html
+++ b/band/template.html
@@ -1,1 +1,12 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <title>BB</title>
 
+    <meta name="Author" content="Chrs Wilton" />
+	<meta name="Description" content="Software Developer in Gwynedd, North Wales" />
+	<meta name="keywords" content="Software Developer, Software Engineer,
+                Java, Html, Swift, Bangor, Gwynedd, North Wales" />
+    <meta charset="UTF-8" /> <!-- <meta http-equiv="Content-Type" content="text/html;charset=utf-8" /> is equivalent, but longer -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+</head>
