--- a/band/template.html
+++ b/band/template.html
@@ -3,11 +3,11 @@
 <head>
     <title>BB</title>
 
-    <meta name="Author" content="Chrs Wilton" />
-	<meta name="Description" content="Software Developer in Gwynedd, North Wales" />
+    <meta name="Author" content="Chrs Wilton">
+	<meta name="Description" content="Software Developer in Gwynedd, North Wales">
 	<meta name="keywords" content="Software Developer, Software Engineer,
-                Java, Html, Swift, Bangor, Gwynedd, North Wales" />
-    <meta charset="UTF-8" /> <!-- <meta http-equiv="Content-Type" content="text/html;charset=utf-8" /> is equivalent, but longer -->
+                Java, Html, Swift, Bangor, Gwynedd, North Wales">
+    <meta charset="UTF-8"> <!-- <meta http-equiv="Content-Type" content="text/html;charset=utf-8" /> is equivalent, but longer -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
@@ -28,7 +28,7 @@
             <section class="section1">
                 <h2>About Me</h2>
                 <p>Welcome! 
-                    <br />My name is Chris,<!-- foaf: firstname --> 
+                    <br>My name is Chris,<!-- foaf: firstname --> 
                     I'm a Software Engineer <!-- profession: software? -->
                     based in Bangor, North Wales. <!-- place: Bangor --> 
                     I graduated from the University of Liverpool in 2018
@@ -37,7 +37,7 @@
                     see a <a href="showcase.html">showcase</a> of my work, 
                     find out about the <a href="activities.html">activities</a> I enjoy, 
                     and take a glance at my <a href="music.html">musical backgorund</a>. 
-                    <br />For more information, please <a href="mailto:chw20vvb@bangor.ac.uk?Subject=Find%20out%20more">contact me</a>.
+                    <br>For more information, please <a href="mailto:chw20vvb@bangor.ac.uk?Subject=Find%20out%20more">contact me</a>.
                 </p>
             </section>
             <section class="section2">
@@ -76,7 +76,7 @@
                 <a href="https://jigsaw.w3.org/css-validator/check/referer" class="validator">
                     <img style="border:0;width:88px;height:31px"
                         src="https://jigsaw.w3.org/css-validator/images/vcss-blue"
-                        alt="Valid CSS!" />
+                        alt="Valid CSS!">
                 </a>
                 <span class="siteInfo">
                     <span id="copyright"></span>
