--- a/band/template.html
+++ b/band/template.html
@@ -10,7 +10,7 @@
     <meta charset="UTF-8"> <!-- <meta http-equiv="Content-Type" content="text/html;charset=utf-8" /> is equivalent, but longer -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-	<link href="css/content.css" rel="stylesheet" type="text/css" />
+	<link href="css/layout.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
     <div class="wrapper">
