--- a/band/template.html
+++ b/band/template.html
@@ -15,7 +15,7 @@
 <body>
     <div class="wrapper">
         <header>
-            <h1>Batala Bangor</h1>
+            <h1 class="batala">Batala Bangor</h1>
             <nav>
                 <ul>
                     <li><a href="about.html" class="this-page">career background</a></li>
