--- a/band/template.html
+++ b/band/template.html
@@ -28,7 +28,7 @@
         <main>
             <!--Main content here-->
             <section class="section1">
-                <h2>About Me</h2>
+                <header><h2>About Me</h2></header>
                 <p>Welcome! 
                     <br>My name is Chris,<!-- foaf: firstname --> 
                     I'm a Software Engineer <!-- profession: software? -->
