--- a/band/template.html
+++ b/band/template.html
@@ -11,10 +11,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 	<link href="css/layout.css" rel="stylesheet" type="text/css" />
+
+	<!-- - - - - - - - - - insert logo in browser tab - - - - - - - - - -->
+	<link rel="icon" href="../img/logo.png" />
+	
 </head>
 <body>
     <div class="wrapper">
         <header>
+			<aside><a href="index.html"><img src="../img/logo.png" class="logo" alt="Band Logo" /></a></aside>
             <h1 class="batala">Batala Bangor</h1>
             <nav>
                 <ul>
