--- a/band/template.html
+++ b/band/template.html
@@ -13,13 +13,13 @@
 	<link href="css/layout.css" rel="stylesheet" type="text/css" />
 
 	<!-- - - - - - - - - - insert logo in browser tab - - - - - - - - - -->
-	<link rel="icon" href="../img/logo.png" />
+	<link rel="icon" href="img/logo.png" />
 	
 </head>
 <body>
     <div class="wrapper">
         <header>
-			<aside><a href="index.html"><img src="../img/logo.png" class="logo" alt="Band Logo" /></a></aside>
+			<aside><a href="index.html"><img src="img/logo.png" class="logo" alt="Band Logo" /></a></aside>
             <h1 class="batala">Batala Bangor</h1>
             <nav>
                 <ul>
