--- a/band/template.html
+++ b/band/template.html
@@ -19,7 +19,7 @@
 <body>
     <div class="wrapper">
         <header>
-			<aside><a href="index.html"><img src="img/logo.png" class="logo" alt="Band Logo" /></a></aside>
+			<a href="template.html"><img src="img/logo.png" class="logo" alt="Band Logo" /></a>
             <h1 class="batala">Batala Bangor</h1>
             <nav>
                 <ul>
