--- a/band/template.html
+++ b/band/template.html
@@ -79,41 +79,43 @@
             </section>
         </main>
         <footer>
-			<aside><a href="https://www.facebook.com/batala.bangor" onclick="target='_blank'"> 	<!-- onclick="target='_blank'" opens the link in a new window when clicked -->
-				<!-- <img src="FB-logo.png" class="socialMedia" alt="Facebook" /> -->
-				Facebook
-			</a></aside>
-			<section>
-				<p class="bandInfo">
-					<span id="bandWebsite">website</span>
-					<span id="bandEmail">email</span>
-				</p>
-				<p class="siteInfo">
-					<span id="copyright">copyright</span>
-	                <span id="modified">modified</span>
-				</p>
-				<p>
-					<span>
-						<a href="http://validator.w3.org/check?uri=referer" onclick="target='_blank'"> 		<!-- open a new window when clicked -->
-							<!-- <img src="http://www.w3.org/Icons/valid-xhtml10" class="validator" alt="Valid XHTML 1.0 Strict" /> -->
-							Valid HTML
-						</a>
-					</span>
-					<span>
-						<a href="http://jigsaw.w3.org/css-validator/check/referer" onclick="target='_blank'"> 		<!-- open a new window when clicked -->
-							<!-- <img src="http://jigsaw.w3.org/css-validator/images/vcss" class="validator" alt="Valid CSS!" /> -->
-							Valid CSS
-						</a> 	
-					</span>
-				</p>
-				
-			</section>
-			<aside>
-				<a href="https://twitter.com/batalabangor" onclick="target='_blank'">		<!-- open a new window when clicked -->
-					<!-- <img src="twitter-logo.png" class="socialMedia" alt="twitter" /> -->
-					Twitter
-				</a>
-			</aside>
+			<div class="footerWrapper">
+				<aside><a href="https://www.facebook.com/batala.bangor" onclick="target='_blank'"> 	<!-- onclick="target='_blank'" opens the link in a new window when clicked -->
+					<!-- <img src="FB-logo.png" class="socialMedia" alt="Facebook" /> -->
+					Facebook
+				</a></aside>
+				<section>
+					<p class="bandInfo">
+						<span id="bandWebsite">website</span>
+						<span id="bandEmail">email</span>
+					</p>
+					<p class="siteInfo">
+						<span id="copyright">copyright</span>
+		                <span id="modified">modified</span>
+					</p>
+					<p>
+						<span>
+							<a href="http://validator.w3.org/check?uri=referer" onclick="target='_blank'"> 		<!-- open a new window when clicked -->
+								<!-- <img src="http://www.w3.org/Icons/valid-xhtml10" class="validator" alt="Valid XHTML 1.0 Strict" /> -->
+								Valid HTML
+							</a>
+						</span>
+						<span>
+							<a href="http://jigsaw.w3.org/css-validator/check/referer" onclick="target='_blank'"> 		<!-- open a new window when clicked -->
+								<!-- <img src="http://jigsaw.w3.org/css-validator/images/vcss" class="validator" alt="Valid CSS!" /> -->
+								Valid CSS
+							</a> 	
+						</span>
+					</p>
+					
+				</section>
+				<aside>
+					<a href="https://twitter.com/batalabangor" onclick="target='_blank'">		<!-- open a new window when clicked -->
+						<!-- <img src="twitter-logo.png" class="socialMedia" alt="twitter" /> -->
+						Twitter
+					</a>
+				</aside>
+			</div>
         </footer>
     </div>
 </body>
